<resources>
    <string name="app_name">Nearby Easy</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_details">"Details "</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="phone_no">9987654321</string>
    <string name="address_title">Address</string>
    <string name="sample_address">Address Not Available.May be the API doesnt have valid address</string>
    <string name="vicinity_title">Vicinity</string>
    <string name="action_Range">Range</string>
    <string name="action_category">Category</string>
    <string name="favorite_places">Favorite Places</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="no_data">No Data Available... Try Again...</string>
    <string name="toast_error">Error.. Try Later</string>
    <string name="add_success">Added To Offline Storage Successfully...</string>
    <string name="remove_success">Removed From Offline Storage Successfully ...</string>
    <string name="null_data">Null Data</string>
    <string name="favorite">Saved Places</string>
    <string name="add_to_fav">Offline Add Button</string>
    <string name="onpost_result_error">Data Not Available  Try Again Later...</string>
    <string name="alert_title">Range For Searching</string>
    <string name="alert_message">Enter range in Meters</string>
    <string name="range_success">Range Update Successful</string>
    <string name="widget_service_exception">Widget Gen. Exception :</string>
    <string name="fav_verbose">Favourite VERBOSE</string>
    <string name="parcelable_tag">Parcelable</string>
    <string name="description">Description</string>
    <string name="list_item_title">Title</string>
    <string name="list_item_subtitle">Category</string>
    <string name="other">Other Places</string>
    <string name="permission_request">Enable Location Permission from Permission Manager option</string>
    <string name="disconnect">Disconnected. Please re-connect.</string>
    <string name="network_lost">Network lost. Please re-connect.</string>
    <string name="widget_empty_text_string">No place added yet!</string>
    <string name="recent_places">Last Added Place</string>
    <string name="open">OPEN</string>
    <string name="closed">CLOSED</string>
    <string name="true_daf">true</string>
    <string name="false_daf">false</string>
    <string name="gps_question">Do you want open GPS setting</string>
    <string name="na">NA</string>
</resources>
