<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivityFragment">


        <item android:id="@+id/action_category"
            app:showAsAction="always"
            app:actionViewClass="android.widget.Spinner"
            android:title="@string/action_category" />
    <item
        android:id="@+id/action_range"
        android:title="@string/action_Range"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_mapmode"
        />
    <item
        android:id="@+id/action_other"
        android:title="@string/other"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_favorite"
        android:title="@string/favorite"
        app:showAsAction="never"
        />

</menu>