<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="dimpesh.com.nearbyeasy.DetailActivityFragment">

<!--
    tools:showIn="@layout/activity_detail">
-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:layout_centerInParent="true">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_image_height"
        android:scaleType="fitXY"
        android:id="@+id/detail_img_head"
        android:src="@drawable/img_placeholder"/>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detail_progress"
        android:visibility="invisible"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <LinearLayout
        android:id="@+id/detail_icon"
        android:layout_marginTop="@dimen/margin_top_phone"
        android:orientation="horizontal"
        android:layout_below="@+id/detail_img_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/detail_img_icon"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:layout_below="@+id/detail_img_head"
        android:src="@drawable/img_placeholder"
        android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/detail_rating"
            android:layout_marginLeft="@dimen/rating_margin_left"
            android:textSize="@dimen/rating_size"
            android:textColor="@color/colorPrimaryDark"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"/>
<!--            android:drawableRight="@android:drawable/star_big_on"/>-->
    </LinearLayout>
    <com.google.android.gms.ads.AdView
        android:id="@+id/detail_admob"
        android:layout_marginTop="@dimen/margin_top_phone"
        android:layout_below="@+id/detail_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:adSize="BANNER"
        app:adUnitId="@string/banner_ad_unit_id"/>


    <TextView
        android:id="@+id/detail_phone"
        android:layout_marginTop="@dimen/margin_top_phone"
        android:layout_below="@+id/detail_admob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/phone_text_size"
        android:autoLink="phone"
        android:text=""
        android:gravity="center"
        android:drawableEnd="@android:drawable/stat_sys_phone_call"
        android:textColor="@color/colorPrimaryDark"
        android:drawableRight="@android:drawable/stat_sys_phone_call" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address_title"
        android:gravity="center"
        android:id="@+id/detail_address_title"
        android:layout_marginTop="@dimen/margin_top_phone"
        android:layout_below="@+id/detail_phone"
        android:textSize="@dimen/address_heading_text_size"/>

    <TextView
        android:id="@+id/detail_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/address_size"
        android:text=""
        android:layout_below="@+id/detail_address_title"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vicinity_title"
        android:gravity="center"
        android:id="@+id/detail_vicinity_title"
        android:layout_marginTop="@dimen/margin_top_phone"
        android:layout_below="@+id/detail_address"
        android:textSize="@dimen/vicinity_heading_text_size"/>

    <TextView
        android:id="@+id/detail_vicinity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/address_size"
        android:text=""
        android:layout_below="@+id/detail_vicinity_title"
        />



    <android.support.design.widget.FloatingActionButton
        android:id="@+id/detail_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/dislike"
        android:contentDescription="@string/add_to_fav"
        android:layout_below="@+id/detail_vicinity"
        android:layout_alignParentRight="true"

        />


</RelativeLayout>
    </ScrollView>
</RelativeLayout>
